# not-the-louvre

./: .env.supabase.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.es.md  README.md  compose.yaml  devenv.nix  package.json  rust-toolchain.toml  skills-lock.json
.agents/skills/threlte-official-docs/: AGENTS.md  README.md  SKILL.md
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: commit-lint.yml
apps/web/: .env.example  .gitignore  .prettierignore  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
apps/web/scripts/: build-e2e.ts  (+6 more)
crates/stroke-json-core/: Cargo.toml
crates/stroke-json-core/src/: exact.rs  lib.rs  prod_like.rs
crates/stroke-json-core/tests/: document_core.rs  document_limits.rs  exact_processing.rs  prod_like_pipeline.rs  storage_golden_fixtures.rs
crates/stroke-json-core/tests/fixtures/: editable_v2.canonical.json  editable_v2.storage.base64  legacy_v1.canonical.json  legacy_v1.input.json  legacy_v1.storage.base64  prod_like_phase1.expected.json  prod_like_phase1.input.json  prod_like_phase2.expected.capped.json  prod_like_phase2.expected.uncapped.json  prod_like_phase2.input.json
crates/stroke-json-wasm/: Cargo.toml
crates/stroke-json-wasm/src/: lib.rs
crates/stroke-json-wasm/tests/: exact_bindings.rs  prod_like_binding.rs
docs/: PRD.md  frontend-backend-wiring.md
scripts/deploy/: vps.sh
scripts/stroke-json/: build-wasm.ts  clean-generated.ts  shared.ts  smoke-server-runtime.ts  verify-toolchain.ts
(+616 files in other folders)
