[workspace]
members = ["crates/stroke-json-core", "crates/stroke-json-wasm"]
default-members = ["crates/stroke-json-core", "crates/stroke-json-wasm"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clipper2-rust = "1.0.2"
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simplify-polyline = "0.5.0"
wasm-bindgen = "0.2.105"