[package]
name = "stroke-json-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
stroke-json-core = { path = "../stroke-json-core" }
wasm-bindgen.workspace = true